# LifeScheduler

./: .gitmodules  CMakeLists.txt  README.md
Layouts/: LayoutTemplate.c  PopupMenuElement.exported.c  PopupMenuElement.rgl  StartWindow.rgl
LifeScheduler/: CMakeLists.txt  IWindowElement.h  LifeScheduler.cpp  LifeScheduler.h  PopupMenuElement.cpp  PopupMenuElement.h  WindowScene.cpp  WindowScene.h  main.cpp
LifeScheduler/MainWindow/: layout_name.c
